--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=library_dotnet;user=root;password=mypassword"
   }
 }
