--- a/Library.csproj
+++ b/Library.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Data\Repositories\" />
+      <Folder Include="Dto\" />
       <Folder Include="Migrations\" />
     </ItemGroup>
 
