--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=library_dotnet;user=root;password=mypassword"
+    "DefaultConnection": "server=localhost;port=3306;database=library_dotnet;user=root;password=nphuonha"
   }
 }
