18 - feat: add anti-forgery token

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=library_dotnet;user=root;password=nphuonha"
+  },
+  "Jwt": {
+    "Key": "eLibDotNET",
+    "Issuer": "eLib",
+    "Audience": "api.v1",
+    "Timeout": 120
   }
 }
