--- a/Library.csproj
+++ b/Library.csproj
@@ -23,6 +23,7 @@
         </PackageReference>
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.7.0" />
         <PackageReference Include="System.Text.Json" Version="8.0.4"/>
     </ItemGroup>
 
