--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=library_dotnet;user=root;password=nphuonha"
+    "DefaultConnection": "server=localhost;port=3306;database=library_dotnet;user=root;password="
   },
   "Jwt": {
-    "Key": "eLibDotNET",
+    "Key": "f7bE2a$k9L0cM*N1pO@q3R4s%T6u&v7W8x#y9Z",
     "Issuer": "eLib",
     "Audience": "api.v1",
     "Timeout": 120
